sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#maxspeed__false21/errors.duarouter
Error: Not numerical maxspeed definition in lane '2_0'.
Quitting (on error).
